tests/snapshots/snapshots__budget_vaul_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 20 → level 0 (15 words)

LICENSE.md
README.md
playwright.config.ts
src/browser.ts
src/constants.ts
src/context.ts
src/helpers.ts
src/index.tsx
src/types.ts
src/use-composed-refs.ts
src/use-controllable-state.ts
src/use-position-fixed.ts
src/use-prevent-scroll.ts
src/use-scale-background.ts
src/use-snap-points.ts
