tests/snapshots/snapshots__budget_vaul_root_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 250 → level 1 (210 words)

LICENSE.md
README.md
playwright.config.ts
src/browser.ts
     1→export function isMobileFirefox
    10→export function isMac
    14→export function isIPhone
    18→export function isSafari
    22→export function isIPad
    30→export function isIOS
    34→export function testPlatform
src/constants.ts
     1→export const TRANSITIONS
     6→export const VELOCITY_THRESHOLD
     8→export const CLOSE_THRESHOLD
    10→export const SCROLL_LOCK_TIMEOUT
    12→export const BORDER_RADIUS
    14→export const NESTED_DISPLACEMENT
    16→export const WINDOW_TOP_OFFSET
    18→export const DRAG_CLASS
src/context.ts
     4→interface DrawerContextValue
    37→export const DrawerContext
    69→export const useDrawerContext
src/helpers.ts
     3→interface Style
     7→const cache
     9→export function isInView
    23→export function set
    42→export function reset
    59→export const isVertical
    72→export function getTranslate
    90→export function dampenValue
    94→export function assignStyle
   108→export function chain
src/index.tsx
    27→export interface WithFadeFromProps
    40→export interface WithoutFadeFromProps
    50→export type DialogProps
   139→export function Root
   803→export const Overlay
   831→export type ContentProps
   833→export const Content
   989→export type HandleProps
   993→const LONG_HANDLE_PRESS_TIMEOUT
   994→const DOUBLE_TAP_TIMEOUT
   996→export const Handle
  1098→export function NestedRoot
  1128→type PortalProps
  1130→export function Portal
  1137→export const Drawer
src/types.ts
     1→export type DrawerDirection
     2→export interface SnapPoint
     7→export type AnyFunction
src/use-composed-refs.ts
     5→type PossibleRef
    11→function setRef
    23→function composeRefs
    31→function useComposedRefs
src/use-controllable-state.ts
     5→type UseControllableStateParams
    11→type SetStateFn
    13→function useCallbackRef
    24→function useUncontrolledState
    39→export function useControllableState
src/use-position-fixed.ts
    15→export function usePositionFixed
src/use-prevent-scroll.ts
     6→const KEYBOARD_BUFFER
     8→export const useIsomorphicLayoutEffect
    10→interface PreventScrollOptions
    16→function chain
    27→const visualViewport
    29→export function isScrollable
    34→export function getScrollParent
    47→const nonTextInputTypes
    68→export function usePreventScroll
   118→function preventScrollMobileSafari
   243→function setStyle
   257→function addEvent
   272→function scrollIntoView
   294→export function isInput
src/use-scale-background.ts
     6→const noop
     8→export function useScaleBackground
src/use-snap-points.ts
     7→export function useSnapPoints
